# rymscraper

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rymparser_legacy.py
src/rymparser/: __init__.py  artist_parser.py  browser.py  cli.py  config.py  models.py  organizer.py  parser.py  search.py  settings.py  slskd_client.py
src/rymscraper/: __init__.py  artist_parser.py  browser.py  chart_parser.py  cli.py  collection_parser.py  config.py  models.py  organizer.py  parser.py  search.py  settings.py  slskd_client.py  spotify.py
tests/: conftest.py  test_artist_parser.py  test_browser.py  test_chart_parser.py  test_cli.py  test_collection_parser.py  test_models.py  test_organizer.py  test_parser.py  test_search.py  test_settings.py  test_slskd_client.py  test_spotify.py
tests/fixtures/: chart_missing_year.html  chart_page.html  collection_missing_year.html  collection_page.html  missing_year.html  no_albums.html  no_next_page.html  single_page.html  with_pagination.html
