[project]
name = "rymparser"
version = "0.1.0"
description = "Parse RYM list and artist pages into Artist - Album (Year) text format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright",
    "playwright-stealth",
    "beautifulsoup4",
    "lxml",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
]

[project.scripts]
rymparser = "rymparser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rymparser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 80

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "playwright_stealth.*",
    "bs4.*",
    "lxml.*",
]
ignore_missing_imports = true
